Having issues with footer overlapping and covering commands and moves.

--- a/style.css
+++ b/style.css
@@ -184,7 +184,7 @@ main {
 
     #movelist-menu {
         width: 100%;
-        height: 45vh;
+        height: 42vh;
         overflow-y: scroll;
     }
 
